--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POV - Proof of Vibes | Plasma Token</title>
+    <title>PLASMA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <!-- Логотип и название -->
         <div class="header">
-            <h1 class="logo">POV</h1>
-            <p class="subtitle">Proof of Vibes</p>
+            <h1 class="logo">PLASMA</h1>
+            <p class="subtitle">PLASMA DESCRIPTION</p>
             <p class="description">Мем-токен на блокчейне Plasma</p>
         </div>
         
