--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FROGSMA</title>
+    <title>Plasmatoad</title>
+    <link rel="icon" type="image/png" href="main.png">
+    <link rel="shortcut icon" type="image/png" href="main.png">
+    <link rel="apple-touch-icon" href="main.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +14,7 @@
         <!-- Логотип и название -->
         <div class="header">
             <img src="main.png" alt="PLASMA" class="main-image">
-            <h1 class="logo">FROGSMA</h1>
+            <h1 class="logo">PLASMATOAD</h1>
             <p class="subtitle">First frog on plasma</p>
             <p class="description">CA: <span id="contract-address" class="contract-address">0x1234567890123456789012345678901234567890</span></p>
             
