--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="main.png" alt="PLASMA" class="main-image">
             <h1 class="logo">PLASMATOAD</h1>
             <p class="subtitle">First frog on plasma</p>
-            <p class="description">CA: <span id="contract-address" class="contract-address">0x1234567890123456789012345678901234567890</span></p>
+            <p class="description">CA: <span id="contract-address" class="contract-address">0x************************</span></p>
             
             <!-- Социальные ссылки -->
             <div class="social-links">
