--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!-- Логотип и название -->
         <div class="header">
-            <img src="main.png" alt="PLASMA" class="main-image">
+            <img src="main.jpg" alt="PLASMA" class="main-image">
             <h1 class="logo">PLASMATOAD</h1>
             <p class="subtitle">First frog on plasma</p>
             <p class="description">CA: <span id="contract-address" class="contract-address">0x4e095e4E65623637B3cB7293AAf3B4F147708D35</span></p>
